# traffic-taffy

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile  Makefile  taffy-wrapper.sh
docs/: Makefile  casestudy.rst  commandoptions.rst  conf.py  extramodules.rst  gettingstarted.rst  importantchanges.rst  index.rst  requirements.txt  usagetips.rst
docs/case-study-output/: initial-compare.txt
docs/tools/: index.rst  taffy-cache-info.rst  taffy-compare.rst  taffy-config.rst  taffy-dissect.rst  taffy-explorer.rst  taffy-graph.rst
pcap_compare/: __init__.py  compare.py  disectmany.py  disector.py  dissectmany.py  dissector.py  graph.py  pcap_compare.py  pcap_disector.py  pcap_graph.py
pcap_compare/tests/: test_compare_results.py  test_normalize.py  test_pcap_disector.py  test_result_storage.py
scripts/: compile-iana.py  end-to-end-test.sh
traffic_taffy/: __init__.py  cache_info.py  compare.py  comparison.py  config.py  dissection.py  dissectmany.py  dissector.py  dissectorresults.py  explore.py  graph.py  graphdata.py  pcap_splitter.py  report.py  taffy_config.py
traffic_taffy/algorithms/: __init__.py  comparecorrelation.py  comparecorrelationchanges.py  compareseries.py  compareslices.py  statistical.py
traffic_taffy/data/: iana_tables.msgpak  iana_tables.pkl
traffic_taffy/dissector_engine/: __init__.py  dnstap.py  dpkt.py  scapy.py
traffic_taffy/hooks/: __init__.py  blag.py  dnssplitter.py  ip2asn.py  labels.py  psl.py
traffic_taffy/output/: __init__.py  console.py  fsdb.py  memory.py
traffic_taffy/reports/: __init__.py  compareseriesreport.py  compareslicesreport.py  correlationchangereport.py  correlationreport.py
traffic_taffy/tests/: test_compare_results.py  test_config.py  test_dict_merge.py  test_global_config.py  test_hooks.py  test_normalize.py  test_pcap_disector.py  test_pcap_dissector.py  test_pcap_splitter.py  test_result_storage.py  test_splitter.py  test_value_printing.py
traffic_taffy/tools/: cache_info.py  compare.py  config.py  dissect.py  explore.py  export.py  graph.py
